--- a/CDC/timer/index.html
+++ b/CDC/timer/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="format-detection" content="telephone=no" />
-    <title>FJU Workshop Timer</title>
-    <link rel="icon" type="img/png" href="./assets/favicon.ico" />
+    <meta name="keywords" content="設計思考, 計時器, 輔大苗圃" />
+    <meta
+      name="description"
+      content="輔大苗圃工作坊計時器可以是一個非常有用的工具，幫助您更有效地管理時間，提升活動效率，並營造良好的腦力激盪氛圍!"
+    />
+    <meta
+      name="url"
+      content="https://yuefenglinatwork.github.io/CDC/timer/index.html"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="輔大苗圃工作坊計時器" />
+    <meta
+      property="og:url"
+      content="https://yuefenglinatwork.github.io/CDC/timer/index.html"
+    />
+    <meta
+      property="og:image"
+      content="https://yuefenglinatwork.github.io/CDC/timer/assets/img/og.jpg"
+    />
+    <meta
+      property="og:description"
+      content="輔大苗圃工作坊計時器可以是一個非常有用的工具，幫助您更有效地管理時間，提升活動效率，並營造良好的腦力激盪氛圍！"
+    />
+    <title>輔大苗圃工作坊計時器</title>
+    <link rel="icon" type="img/png" href="./assets/img/favicon.ico" />
     <link href="./assets/css/build.css" rel="stylesheet" />
     <link href="./assets/css/animate.min.css" rel="stylesheet" />
     <script defer src="./assets/js/alpinejs.js"></script>
