--- a/timer/index.html
+++ b/timer/index.html
@@ -12,17 +12,17 @@
     />
     <meta
       name="url"
-      content="https://yuefenglinatwork.github.io/CDC/timer/index.html"
+      content="https://yuefenglinatwork.github.io/timer/index.html"
     />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="輔大苗圃計時器" />
     <meta
       property="og:url"
-      content="https://yuefenglinatwork.github.io/CDC/timer/index.html"
+      content="https://yuefenglinatwork.github.io/timer/index.html"
     />
     <meta
       property="og:image"
-      content="https://yuefenglinatwork.github.io/CDC/timer/assets/img/og.jpg"
+      content="https://yuefenglinatwork.github.io/timer/assets/img/og.jpg"
     />
     <meta
       property="og:description"
