--- a/timer/index.html
+++ b/timer/index.html
@@ -364,7 +364,7 @@
                       x-model="selectedSong"
                       class="sr-only"
                     />
-                    暖身活動
+                    中場休息
                   </label>
                 </div>
                 <div class="w-full">
