--- a/timer/index.html
+++ b/timer/index.html
@@ -383,7 +383,7 @@
                       class="sr-only"
                     />
                     <input
-                      type="text"
+                      type="url"
                       placeholder="輸入YouTube網址"
                       @input="updateYouTubeVideoUrl($event)"
                       @click="selectedSong = 'song4';playClickSound();pauseSong()"
